<resources>
    <string name="app_name">Mvvm Structure</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_have_an_account">Already Have an account ?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="forget_password">forget password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or_sign_up_with_social_account">Or Sign up with social account</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="logout">Logout</string>
    <string name="my_map_api_key">AIzaSyBcZyU1_pkzOKrZJcHUMKULb9vbqGb4jqc</string>
</resources>