<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@color/background"
        android:orientation="vertical"
        tools:context=".ui.fragment.LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/background"
        android:gravity="bottom"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Login"
        app:titleCentered="false"
        app:titleTextAppearance="@style/ToolbarTitleTextStyle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="120dp"
        android:background="@color/white"
        android:hint="@string/email"
        android:textColorHint="@color/gray"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="2dp"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/outlinedEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:hint="Password"
        android:textColorHint="@color/gray"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="2dp"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/forgot_your_password"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="15sp" />
        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@color/orange"
            android:padding="16dp"
            android:text="@string/login"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="100dp"
            android:textColor="@color/black"
            android:text="Or Sign up with social account"
            android:textAlignment="center"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="50dp"
            android:background="@color/background"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageButton
                android:layout_width="92dp"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/rounded_background"
                android:elevation="@dimen/cardview_default_elevation"
                android:padding="16dp"
                android:src="@drawable/ic_google" />

            <ImageButton
                android:layout_width="92dp"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/rounded_background"
                android:elevation="@dimen/cardview_default_elevation"
                android:padding="16dp"
                android:src="@drawable/ic_facebook" />

        </LinearLayout>
    </LinearLayout>


</ScrollView>