<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@color/background"
        android:orientation="vertical"
        tools:context=".ui.fragment.SignupFragment">

        <!-- TODO: Update blank fragment layout -->

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/background"
            android:textAlignment="gravity"
            android:gravity="bottom"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="Sign Up"
            app:titleCentered="false"
            app:titleTextAppearance="@style/ToolbarTitleTextStyle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="120dp"
            android:background="@color/white"
            android:hint="Name"
            android:textColorHint="@color/gray"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="2dp"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/outlinedEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:hint="Email"
            android:textColorHint="@color/gray"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="2dp"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:hint="Password"
            android:textColorHint="@color/gray"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="2dp"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_switch"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:text="@string/already_have_an_account"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/signupbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@color/orange"
            android:padding="16dp"
            android:text="@string/sign_up"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="50dp"
            android:text="@string/or_sign_up_with_social_account"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="50dp"
            android:background="@color/background"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageButton
                android:layout_width="92dp"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/rounded_background"
                android:elevation="@dimen/cardview_default_elevation"
                android:padding="16dp"
                android:src="@drawable/ic_google" />

            <ImageButton
                android:layout_width="92dp"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/rounded_background"
                android:elevation="@dimen/cardview_default_elevation"
                android:padding="16dp"
                android:src="@drawable/ic_facebook" />

        </LinearLayout>
    </LinearLayout>


</ScrollView>
